# python-siphash24

./: .gitignore  CHANGELOG.rst  README.rst  c-siphash.c  check.py  meson.build  pyproject.toml  setup.py  siphash24.pyx  siphash24.pyx.in  tempita.py  test.py
.github/workflows/: docs.yml  lint.yml  tests.yml  wheels.yml
docs/: conf.py  index.rst
subprojects/: libcsiphash-1.wrap  libcstdaux-1.wrap
